move to webm; try fix pub size on mobile; try fix dark mode on mobile

--- a/src/styles.module.scss
+++ b/src/styles.module.scss
@@ -1,3 +1,6 @@
+:global(html) {
+  color-scheme: light dark;
+}
 
 // Color variables
 $secondary: #f5a418;
@@ -46,7 +49,8 @@ $text-white: #fafafa;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root[data-theme="dark"] {
+  :root[data-theme="dark"],
+  :root:not([data-theme="light"]) {
     --bg: #{$bg-dark};
     --text-color: #{$text-white};
   }
@@ -103,6 +107,7 @@ ul {
 
 li {
   margin-bottom: 0.5em;
+  max-width: 75%;
 }
 
 .flex-row {
@@ -358,6 +363,8 @@ input:checked + .slider:before {
 }
 
 // PUBLICATIONS
+
+
 li a{
   color: #006666;
 }
